fix some bugs. first page number removed

--- a/src/set.tex
+++ b/src/set.tex
@@ -1,5 +1,5 @@
 % This file was generated using TeXTask
-% 2014/10/31
+% 2014/11/12
 
 \documentclass[a4paper, 11pt]{article}
 
@@ -27,6 +27,7 @@
 	\rmfamily
 	\vspace{3cm}
 	\maketitle
+	\thispagestyle{empty}
 	
 	\begin{center}
 		\large
